results/SpecGenBench/0-shot/log-MatrixAdd-2023_11_28_22_53_11.txt
public class MatrixAdd {
    
    //@ requires a != null;
    //@ requires b != null;
    //@ requires a.length == 2;
    //@ requires a[0].length == 2;
    //@ requires b.length == 2;
    //@ requires b[0].length == 2;
    //@ ensures \result != null;
    //@ ensures \result.length == 2;
    //@ ensures \result[0].length == 2;
    //@ ensures \result[0][0] == a[0][0] + b[0][0];
    //@ ensures \result[0][1] == a[0][1] + b[0][1];
    //@ ensures \result[1][0] == a[1][0] + b[1][0];
    //@ ensures \result[1][1] == a[1][1] + b[1][1];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:20: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_637_637___28 i_637_651___31
1 error

